# emojicp

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
benches/: search_direct.rs  search_exact.rs
public/static/: emojitree.raw
src/: bin.rs  carousel.rs  cli.rs  clipboard.rs  codepairs.rs  constants.rs  emoji.rs  main.rs  mod.rs  pair.rs  search.rs  suggestion.rs  types.rs  ui.rs
src/lib/: carousel.rs  constants.rs  lib.rs  pair.rs  search.rs  types.rs  ui.rs
