[package]
name = "emojicp"
version = "0.1.0"
edition = "2021"
description = "A command-line tool to search for emojis by name"
keywords = ["emoji", "copy"]
categories = ["command-line-utilities"]
authors = ["Nicholas R. Smith"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/johnDeSilencio/emojicp"
documentation = "https://docs.rs/emojicp"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
termion = "2.0.1"
arboard = "3.2.0"
bk-tree = { version = "0.4.0", git = "https://github.com/johnDeSilencio/rust-bk-tree", branch = "feature/serde_support", features = ["serde-support"] }
serde = { version = "1.0.152", features = ["derive"] }
bincode = "1.3"
