[package]
name = "emojicp"
version = "0.1.0"
edition = "2021"
description = "A command-line tool to search for emojis by name"
keywords = ["emoji", "copy"]
categories = ["command-line-utilities"]
authors = ["Nicholas R. Smith"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/johnDeSilencio/emojicp"
documentation = "https://docs.rs/emojicp"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
termion = "2.0.1"
arboard = "3.2.0"
rust-embed = { version = "6.6", features = ["debug-embed"] }
serde = { version = "1.0.152", features = ["derive"] }
bk-tree = { version = "0.5", features = ["serde"] }
bincode = "1.3"

[build-dependencies]
clap = { version = "4.1.4", features = ["derive"] }
termion = "2.0.1"
arboard = "3.2.0"
rust-embed = { version = "6.6", features = ["debug-embed"] }
serde = { version = "1.0.152", features = ["derive"] }
bk-tree = { version = "0.5", features = ["serde"] }
bincode = "1.3"

