[package]
authors = ["Nicholas R. Smith"]
categories = ["command-line-utilities"]
description = "A command-line tool to search for emojis by name"
documentation = "https://docs.rs/emojicp"
edition = "2021"
homepage = "https://github.com/johnDeSilencio/emojicp"
keywords = ["emoji", "copy"]
license = "GPL-3.0-or-later"
name = "emojicp"
readme = "README.md"
version = "0.3.1"

[[bin]]
name = "emojicp"
path = "src/bin.rs"

[lib]
name = "emojicp"
path = "src/lib/lib.rs"

[dependencies]
bincode = "1.3"
bk-tree = { version = "0.5", features = ["serde"] }
clap = { version = "4.1.4", features = ["derive"] }
clipboard-anywhere = "0.2.1"
crossterm = "0.26"
ratatui = { version = "0.21.0", features = ["crossterm"] }
rust-embed = { version = "6.6", features = ["debug-embed"] }
serde = { version = "1.0.152", features = ["derive"] }
termion = "2.0.1"
thiserror = "1.0.40"

[build-dependencies]
arboard = "3.2.0"
bincode = "1.3"
bk-tree = { version = "0.5", features = ["serde"] }
clap = { version = "4.1.4", features = ["derive"] }
rust-embed = { version = "6.6", features = ["debug-embed"] }
serde = { version = "1.0.152", features = ["derive"] }
termion = "2.0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8.5"

[[bench]]
harness = false
name = "search_exact"
